test-cases/final-dump/trait_error_impl_missing.exp
Error detected during type checking of module(s) trait_error_impl_missing, trait_error_impl_missing.required_method
final-dump/trait_error_impl_missing.wybe:7:1: Invalid implementation of trait trait_error_impl_missing.required_method for type wybe.int: missing required proc render
