test-cases/final-dump/trait_error_impl_missing.wybe
module required_method {
    trait

    abstract render(x:T<:_): string
}

impl int <: required_method

!println(required_method.render(42))
